Changed scrollbar on webkit. Fixed lake positioning on medium screens

--- a/scss/animations/lake.scss
+++ b/scss/animations/lake.scss
@@ -3,7 +3,7 @@
    %fill-lake-bg {
       @include fill-bg(1920px, 1080px);
       background-position: right;
-      @media (max-width: $sm-breakpoint) {
+      @media (max-width: $md-breakpoint) {
          right: 0;
       }
    }
